--- a/pom.xml
+++ b/pom.xml
@@ -24,26 +24,19 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.1.2</version>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.3</version>
                 <configuration>
-                    <archive>
-                        <manifest>
-                            <addClasspath>true</addClasspath>
-                            <mainClass>edu.unl.cse.csce361.boggle.Main</mainClass>
-                        </manifest>
-                    </archive>
+                    <mainClass>BoggleScreen</mainClass>
                 </configuration>
-            </plugin>
-        </plugins>
+            </plugin></plugins>
     </build>
     <dependencies>
         <dependency>
             <groupId>org.openjfx</groupId>
-            <artifactId>javafx</artifactId>
+            <artifactId>javafx-controls</artifactId>
             <version>11</version>
-            <type>pom</type>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
