changed solver class to utilize hash set for constant time searches within dictionary rather than linear searches and refactored other classes to utilize dictionary of words as a hash set. also changed unit tests accordingly to match refactoring

--- a/pom.xml
+++ b/pom.xml
@@ -52,9 +52,15 @@
         </plugins>
         <resources>
             <resource>
-                <directory>src/main/java</directory>
+                <directory>src/main/java/edu/unl/cse/csce361/boggle/frontend</directory>
                 <includes>
                     <include>**/*.fxml</include>
+                </includes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>*</include>
                 </includes>
             </resource>
         </resources>
