--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
         </plugins>
         <resources>
             <resource>
-                <directory>src/main/java/edu/unl/cse/csce361/boggle/frontend</directory>
+                <directory>${basedir}/src/main/java</directory>
                 <includes>
                     <include>**/*.fxml</include>
                 </includes>
