--- a/pom.xml
+++ b/pom.xml
@@ -58,10 +58,7 @@
                 </includes>
             </resource>
             <resource>
-                <directory>src/main/resources</directory>
-                <includes>
-                    <include>*</include>
-                </includes>
+                <directory>>${basedir}/src/main/resources</directory>
             </resource>
         </resources>
     </build>
