--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <groupId>edu.unl.cse.csce361.boggle</groupId>
     <artifactId>Boggle</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
