--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
                 </includes>
             </resource>
             <resource>
-                <directory>>${basedir}/src/main/resources</directory>
+                <directory>${basedir}/src/main/resources</directory>
             </resource>
         </resources>
     </build>
