--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,21 @@
                     <source>11</source>
                     <target>11</target>
                 </configuration>
+	</plugin>
+	            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                        <configuration>
+                            <classifier>spring-boot</classifier>
+                                <mainClass>edu.unl.cse.csce361.boggle.frontend.Main</mainClass>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>org.openjfx</groupId>
